Fixed inputs being too small on Windows

--- a/scss/auth/master.scss
+++ b/scss/auth/master.scss
@@ -22,6 +22,7 @@
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.247);
         transition: box-shadow 0.5s;
+        width: 60%;
 
         &.error {
             box-shadow: 0 0 10px rgb(218, 47, 47) !important;
